// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildViolationsData > should build data structure with correlations 1`] = `
{
  "byImpact": {
    "serious": 1,
  },
  "groups": [
    {
      "count": 1,
      "impact": "serious",
      "ruleId": "empty-accessible-name",
      "violations": [
        {
          "correlation": {
            "confidence": "high",
            "spoken": "button",
            "stepIndex": 5,
            "strategyName": "tab",
          },
          "htmlSnippet": "<button></button>",
          "id": "nvda-violation-1",
          "impact": "serious",
          "message": "Button has no accessible name",
          "ruleId": "empty-accessible-name",
          "selector": "button",
          "wcag": "4.1.2 A",
          "wcagLevel": "A",
        },
      ],
      "wcag": "4.1.2 A",
      "wcagLevel": "A",
    },
  ],
  "totalRules": 1,
  "totalViolations": 1,
}
`;

exports[`buildViolationsData > should build data structure without correlations 1`] = `
{
  "byImpact": {
    "serious": 1,
  },
  "groups": [
    {
      "count": 1,
      "impact": "serious",
      "ruleId": "empty-accessible-name",
      "violations": [
        {
          "correlation": undefined,
          "htmlSnippet": "<button></button>",
          "id": "nvda-violation-1",
          "impact": "serious",
          "message": "Button has no accessible name",
          "ruleId": "empty-accessible-name",
          "selector": "button",
          "wcag": "4.1.2 A",
          "wcagLevel": "A",
        },
      ],
      "wcag": "4.1.2 A",
      "wcagLevel": "A",
    },
  ],
  "totalRules": 1,
  "totalViolations": 1,
}
`;

exports[`buildViolationsData > should truncate long HTML snippets 1`] = `
{
  "byImpact": {
    "critical": 1,
  },
  "groups": [
    {
      "count": 1,
      "impact": "critical",
      "ruleId": "button-name",
      "violations": [
        {
          "correlation": undefined,
          "htmlSnippet": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx...",
          "id": "long-html",
          "impact": "critical",
          "message": "Buttons must have discernible text",
          "ruleId": "button-name",
          "selector": "div",
          "wcag": "4.1.2 A",
          "wcagLevel": "A",
        },
      ],
      "wcag": "4.1.2 A",
      "wcagLevel": "A",
    },
  ],
  "totalRules": 1,
  "totalViolations": 1,
}
`;

exports[`buildViolationsSection > should build complete section from violations array 1`] = `
"<violations total="3" rules="3" critical="2" serious="1">
    <rule id="button-name" wcag="4.1.2 A" impact="critical" count="1">
        <violation id="v1">
            <message>Buttons must have discernible text</message>
            <selector>button.submit-btn</selector>
            <html_snippet><![CDATA[<button class="submit-btn"></button>]]></html_snippet>
            <transcript_match strategy="tab" step="5" confidence="low">
                <spoken>button</spoken>
            </transcript_match>
        </violation>
    </rule>
    <rule id="link-name" wcag="4.1.2 A" impact="critical" count="1">
        <violation id="v2">
            <message>Links must have text</message>
            <selector>button.submit-btn</selector>
            <html_snippet><![CDATA[<button class="submit-btn"></button>]]></html_snippet>
            <transcript_match strategy="tab" step="0" confidence="low">
                <spoken>Skip to main content, link</spoken>
            </transcript_match>
        </violation>
    </rule>
    <rule id="empty-accessible-name" wcag="4.1.2 A" impact="serious" count="1">
        <violation id="v3">
            <message>Button has no accessible name</message>
            <selector>button</selector>
            <html_snippet><![CDATA[<button></button>]]></html_snippet>
            <transcript_match strategy="tab" step="5" confidence="high">
                <spoken>button</spoken>
            </transcript_match>
        </violation>
    </rule>
</violations>"
`;

exports[`buildViolationsSection > should build section with grouping disabled 1`] = `
"<violations total="2" rules="1" critical="2">
    <rule id="button-name" wcag="4.1.2 A" impact="critical" count="1">
        <violation id="v1">
            <message>Buttons must have discernible text</message>
            <selector>button.submit-btn</selector>
            <html_snippet><![CDATA[<button class="submit-btn"></button>]]></html_snippet>
        </violation>
    </rule>
    <rule id="button-name" wcag="4.1.2 A" impact="critical" count="1">
        <violation id="v2">
            <message>Buttons must have discernible text</message>
            <selector>button.submit-btn</selector>
            <html_snippet><![CDATA[<button class="submit-btn"></button>]]></html_snippet>
        </violation>
    </rule>
</violations>"
`;

exports[`buildViolationsSection > should filter by impact 1`] = `
"<violations total="2" rules="1" critical="1" moderate="1">
    <rule id="button-name" wcag="4.1.2 A" impact="critical" count="2">
        <violation id="v1">
            <message>Buttons must have discernible text</message>
            <selector>button.submit-btn</selector>
            <html_snippet><![CDATA[<button class="submit-btn"></button>]]></html_snippet>
        </violation>
        <violation id="v2">
            <message>Buttons must have discernible text</message>
            <selector>button.submit-btn</selector>
            <html_snippet><![CDATA[<button class="submit-btn"></button>]]></html_snippet>
        </violation>
    </rule>
</violations>"
`;

exports[`buildViolationsSection > should limit violations per group 1`] = `
"<violations total="5" rules="1" critical="5">
    <rule id="button-name" wcag="4.1.2 A" impact="critical" count="5" showing="2">
        <violation id="v1">
            <message>Buttons must have discernible text</message>
            <selector>button.submit-btn</selector>
            <html_snippet><![CDATA[<button class="submit-btn"></button>]]></html_snippet>
        </violation>
        <violation id="v2">
            <message>Buttons must have discernible text</message>
            <selector>button.submit-btn</selector>
            <html_snippet><![CDATA[<button class="submit-btn"></button>]]></html_snippet>
        </violation>
    </rule>
</violations>"
`;
